// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compileSass text compile only content 1`] = `
".index {
  background-color: #ececec; }
"
`;

exports[`compileSass text compile only sass file path 1`] = `
"body {
  font: 100% Helvetica, sans-serif;
  color: #333; }
"
`;

exports[`compileSass text compile sass file and multiple resource file with directory 1`] = `
".ui-color--info {
  color: #78A4FA; }

.ui-color--positive {
  color: #13CE66; }

.ui-color--negative {
  color: #FF4949; }

.ui-color--warning {
  color: #FFC82C; }

.box {
  -webkit-transform: rotate(30deg);
  -ms-transform: rotate(30deg);
  transform: rotate(30deg); }
"
`;

exports[`compileSass text compile sass file and multiple resource path 1`] = `
".ui-color--info {
  color: #78A4FA; }

.ui-color--positive {
  color: #13CE66; }

.ui-color--negative {
  color: #FF4949; }

.ui-color--warning {
  color: #FFC82C; }

.box {
  -webkit-transform: rotate(30deg);
  -ms-transform: rotate(30deg);
  transform: rotate(30deg); }
"
`;

exports[`compileSass text compile sass file and single resource file with directory 1`] = `
".index {
  font-size: 20px; }

.ui-color--info {
  color: #78A4FA; }

.ui-color--positive {
  color: #13CE66; }

.ui-color--negative {
  color: #FF4949; }

.ui-color--warning {
  color: #FFC82C; }
"
`;

exports[`compileSass text compile sass file and single resource path 1`] = `
".index {
  font-size: 20px; }

.ui-color--info {
  color: #78A4FA; }

.ui-color--positive {
  color: #13CE66; }

.ui-color--negative {
  color: #FF4949; }

.ui-color--warning {
  color: #FFC82C; }
"
`;
